# signals

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  requirements.txt
docs/blog/: authors.yml  why-im-betting-on-ai-streaming.md
docs/javascripts/: firebase-feedback.js
docs/posts/: authors.yml
docs/posts/2026/: manifesto.md
docs/stylesheets/: extra.css
